--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  max-width: 400px;
+  max-width: 500px;
   margin: 0;
 }
 
@@ -162,6 +162,32 @@ nav {
   height: 250px;
   text-decoration: none;
   color: black;
+}
+
+footer {
+  font-family: "Roboto", sans-serif;
+  background-color: #313131;
+  color: white;
+  height: 200px;
+}
+footer h2 {
+  font-family: "Shrikhand", cursive;
+  font-size: 18px;
+  padding-top: 20px;
+  padding-left: 40px;
+}
+footer ul {
+  list-style: none;
+}
+footer ul a {
+  text-decoration: none;
+  color: white;
+}
+footer ul li {
+  padding-bottom: 10px;
+}
+footer ul i {
+  padding-right: 5px;
 }
 
 /*# sourceMappingURL=style.css.map */
