début page restaurant

--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ nav {
 footer {
   font-family: "Roboto", sans-serif;
   background-color: #313131;
-  color: white;
+  color: #dddddd;
   height: 200px;
 }
 footer h2 {
