--- a/sass/style.scss
+++ b/sass/style.scss
@@ -166,7 +166,7 @@ nav{
 footer{
     font-family: $font_texte;
     background-color: #313131;
-    color: white;
+    color: rgb(221, 221, 221);
     height: 200px;
     h2{
         font-family: $font_titre;
