--- a/restaurant/sass/style.scss
+++ b/restaurant/sass/style.scss
@@ -27,3 +27,107 @@ header{
         margin-left: 30px;
     }
 }
+.image{
+    width: 100%;
+    height: 300px;
+    position: absolute;
+    z-index: 1;
+    img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+main{
+    background-color: rgb(228, 226, 226);
+    width: 100%;
+    position: relative;
+    z-index: 2;
+    margin-top: 250px;
+    border-top-right-radius: 30px;
+    border-top-left-radius: 30px;
+    .titre{
+        width: 90%;
+        margin: 10px 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-family: $font_titre;
+        font-size: 18px;
+    }
+    .entrées, .plats, .desserts{
+        width: 100%;
+        margin-top: 30px;
+        h2{
+            font-weight: 200;
+            margin-left: 2%;
+            display: inline;
+            border-bottom: 3px solid $color_tertiaire;
+        }
+        .selection{
+            width: 96%;
+            height: 60px;
+            margin: 20px 2% 0px 2%;
+            background-color: white;
+            display: flex;
+            flex-direction: column;
+            flex-wrap:wrap ;
+            justify-content: center;
+            align-items: space-between;
+            border-radius: 15px;
+        }
+        h3{
+            margin: 0px 10px;
+        }
+        .commentaire{
+            display: flex;
+            justify-content: space-between;
+            p{
+                margin: 0px 10px;
+                
+            }
+        }
+    }
+    .btncom{
+        width: 100%;
+        height: 150px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        a{
+            text-decoration: none;
+            font-size: 18px;
+            padding: 10px 30px;
+            background-color: #d95de4;
+            color: white;
+            border-radius: 25px;
+        }
+    }
+}
+footer{
+    font-family: $font_texte;
+    background-color: #313131;
+    color: rgb(221, 221, 221);
+    height: 200px;
+    margin-top: -15px;
+    h2{
+        font-family: $font_titre;
+        font-size: 18px;
+        padding-top: 20px;
+        padding-left: 40px;
+    }
+    ul{
+        list-style: none;
+        a{
+            text-decoration: none;
+            color: white;
+            
+        }
+        li{
+            padding-bottom: 10px;
+        }
+        i{
+            padding-right: 5px;
+        }
+    }
+}
