--- a/restaurant/css/style.css
+++ b/restaurant/css/style.css
@@ -3,6 +3,17 @@ body {
   max-width: 500px;
   margin: 0;
 }
+@media screen and (min-width: 500px) {
+  body {
+    max-width: 900px;
+  }
+}
+@media screen and (min-width: 900px) {
+  body {
+    max-width: 2000px;
+    width: auto;
+  }
+}
 
 header {
   width: 100%;
@@ -11,11 +22,35 @@ header {
   align-items: center;
   justify-content: space-between;
 }
+@media screen and (min-width: 500px) {
+  header {
+    height: 80px;
+    width: 100%;
+  }
+}
+@media screen and (min-width: 900px) {
+  header {
+    height: 100px;
+    width: 100%;
+  }
+}
 header img {
   width: 40%;
   height: 25px;
   padding: 10px 0px;
   margin-right: 30%;
+}
+@media screen and (min-width: 500px) {
+  header img {
+    width: 30%;
+    margin-right: 35%;
+  }
+}
+@media screen and (min-width: 900px) {
+  header img {
+    width: 30%;
+    height: 40px;
+  }
 }
 header a {
   text-decoration: none;
@@ -29,6 +64,11 @@ header a {
   height: 300px;
   position: absolute;
   z-index: 1;
+}
+@media screen and (min-width: 900px) {
+  .image {
+    height: 400px;
+  }
 }
 .image img {
   width: 100%;
@@ -45,6 +85,14 @@ main {
   border-top-right-radius: 30px;
   border-top-left-radius: 30px;
 }
+@media screen and (min-width: 900px) {
+  main {
+    margin-top: 350px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+}
 main .titre {
   width: 90%;
   margin: 10px 20px;
@@ -54,9 +102,23 @@ main .titre {
   font-family: "Shrikhand", cursive;
   font-size: 18px;
 }
+@media screen and (min-width: 900px) {
+  main .titre {
+    width: 100%;
+    height: 80px;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+}
 main .entrées, main .plats, main .desserts {
   width: 100%;
   margin-top: 30px;
+}
+@media screen and (min-width: 900px) {
+  main .entrées, main .plats, main .desserts {
+    width: 30%;
+  }
 }
 main .entrées h2, main .plats h2, main .desserts h2 {
   font-weight: 200;
@@ -75,6 +137,10 @@ main .entrées .selection, main .plats .selection, main .desserts .selection {
   justify-content: center;
   align-items: space-between;
   border-radius: 15px;
+}
+main .entrées .selection a, main .plats .selection a, main .desserts .selection a {
+  text-decoration: none;
+  color: black;
 }
 main .entrées h3, main .plats h3, main .desserts h3 {
   margin: 0px 10px;
@@ -109,14 +175,35 @@ footer {
   height: 200px;
   margin-top: -15px;
 }
+@media screen and (min-width: 900px) {
+  footer {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 0px;
+  }
+}
 footer h2 {
   font-family: "Shrikhand", cursive;
   font-size: 18px;
   padding-top: 20px;
   padding-left: 40px;
 }
+@media screen and (min-width: 900px) {
+  footer h2 {
+    font-size: 25px;
+  }
+}
 footer ul {
   list-style: none;
+}
+@media screen and (min-width: 900px) {
+  footer ul {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+  }
 }
 footer ul a {
   text-decoration: none;
