--- a/restaurant/sass/style.scss
+++ b/restaurant/sass/style.scss
@@ -3,10 +3,31 @@ $font_texte: 'Roboto', sans-serif;
 $color_primaire: #9356DC;
 $color_secondaire: #FF79DA;
 $color_tertiaire: #99E2D0;
+$breakpoints:(
+    tablette: 500px,
+    desktop: 900px
+);
+@mixin tablette{
+    @media screen  and (min-width: map-get($breakpoints,tablette)){
+        @content;
+    }
+}
+@mixin desktop{
+    @media screen  and (min-width: map-get($breakpoints,desktop)){
+        @content;
+    }
+}
 
 body{
     max-width: 500px;
     margin: 0;
+    @include tablette{
+        max-width: 900px;
+    }
+    @include desktop{
+        max-width: 2000px;
+        width: auto;
+    }
 }
 header{
     width: 100%;
@@ -14,11 +35,27 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    @include tablette{
+        height: 80px;
+        width: 100%;
+    }
+    @include desktop{
+        height: 100px;
+        width: 100%;
+    }
     img{
         width: 40%;
         height: 25px;
         padding: 10px 0px;
         margin-right: 30%;
+        @include tablette{
+            width: 30%;
+            margin-right: 35%;
+        }
+        @include desktop{
+            width: 30%;
+            height: 40px;
+        }
     }
     a{
         text-decoration: none;
@@ -32,6 +69,9 @@ header{
     height: 300px;
     position: absolute;
     z-index: 1;
+    @include desktop{
+        height: 400px;
+    }
     img{
         width: 100%;
         height: 100%;
@@ -46,6 +86,12 @@ main{
     margin-top: 250px;
     border-top-right-radius: 30px;
     border-top-left-radius: 30px;
+    @include desktop{
+        margin-top: 350px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
     .titre{
         width: 90%;
         margin: 10px 20px;
@@ -54,10 +100,21 @@ main{
         align-items: center;
         font-family: $font_titre;
         font-size: 18px;
+        @include desktop{
+            width: 100%;
+            height: 80px;
+            flex-direction: column;
+            justify-content: space-around;
+            align-items: center;
+
+        }
     }
     .entrées, .plats, .desserts{
         width: 100%;
         margin-top: 30px;
+        @include desktop{
+            width: 30%;
+        }
         h2{
             font-weight: 200;
             margin-left: 2%;
@@ -75,6 +132,10 @@ main{
             justify-content: center;
             align-items: space-between;
             border-radius: 15px;
+            a{
+                text-decoration: none;
+                color:black;
+            }
         }
         h3{
             margin: 0px 10px;
@@ -110,14 +171,29 @@ footer{
     color: rgb(221, 221, 221);
     height: 200px;
     margin-top: -15px;
+    @include desktop{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 0px;
+    }
     h2{
         font-family: $font_titre;
         font-size: 18px;
         padding-top: 20px;
         padding-left: 40px;
+        @include desktop{
+            font-size: 25px;
+        }
     }
     ul{
         list-style: none;
+        @include desktop{
+            width: 100%;
+            display: flex;
+            justify-content: space-around;
+        }
         a{
             text-decoration: none;
             color: white;
