--- a/sass/style.scss
+++ b/sass/style.scss
@@ -222,14 +222,14 @@ nav{
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-around;
-        align-items: space-around;
+
     }
     @include desktop{
         width: 100%;
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-around;
-        align-items: space-around;
+
     }
     .imageresto{
         width: 100%;
@@ -263,6 +263,9 @@ nav{
        padding: 0px 5%;
        border-bottom-left-radius: 20px;
        border-bottom-right-radius: 20px;
+       .coeurplein{
+           color: $color_primaire;
+       }
     }
     i{
         font-size: 20px;
