--- a/css/style.css
+++ b/css/style.css
@@ -37,12 +37,13 @@ body {
 .loading {
   width: 100%;
   height: 100vh;
+  font-family: "Shrikhand", cursive;
   font-size: 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #6d0000;
+  background-color: whitesmoke;
   animation-name: loading;
   animation-delay: 9s;
   animation-duration: 1000ms;
