--- a/sass/style.scss
+++ b/sass/style.scss
@@ -53,12 +53,13 @@ body{
 .loading{
     width: 100%;
     height: 100vh;
+    font-family: $font_titre;
     font-size: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #6d0000;
+    background-color: rgb(245, 245, 245);
     animation-name: loading;
     animation-delay: 9s;
     animation-duration: 1000ms;
