--- a/sass/style.scss
+++ b/sass/style.scss
@@ -249,7 +249,8 @@ nav{
         padding: 0px;
     }
     h2{
-        margin-left: -230px;
+        width: 90%;
+        text-align: start;
         padding-bottom: 20px;
         @include tablette{
             font-size: 25px;
