--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ body {
   max-width: 500px;
   margin: 0;
   padding: 0;
+  position: relative;
 }
 @media screen and (min-width: 500px) {
   body {
@@ -36,33 +37,35 @@ body {
 
 .loading {
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  position: absolute;
+  z-index: 3;
   font-family: "Shrikhand", cursive;
   font-size: 50px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   background-color: whitesmoke;
   animation-name: loading;
-  animation-delay: 9s;
+  animation-delay: 3s;
   animation-duration: 1000ms;
   animation-fill-mode: both;
 }
 
 .mot1 {
   color: #9356DC;
-  animation: loader 2800ms 3;
+  animation: loader 900ms 3;
 }
 
 .mot2 {
   color: #FF79DA;
-  animation: loader 2800ms 100ms 3;
+  animation: loader 900ms 100ms 3;
 }
 
 .mot3 {
   color: #99E2D0;
-  animation: loader 2800ms 200ms 3;
+  animation: loader 900ms 200ms 3;
 }
 
 @media screen and (min-width: 900px) {
