--- a/sass/style.scss
+++ b/sass/style.scss
@@ -40,6 +40,7 @@ body{
     max-width: 500px;
     margin: 0;
     padding: 0;
+    position: relative;
     @include tablette{
         max-width: 900px;
     }
@@ -52,31 +53,33 @@ body{
 }
 .loading{
     width: 100%;
-    height: 100vh;
+    height: 100%;
+    position: absolute;
+    z-index: 3;
     font-family: $font_titre;
     font-size: 50px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     background-color: rgb(245, 245, 245);
     animation-name: loading;
-    animation-delay: 9s;
+    animation-delay: 3s;
     animation-duration: 1000ms;
     animation-fill-mode: both;
 }
 .mot1{
     color: $color_primaire;
-    animation: loader 2800ms 3;
+    animation: loader 900ms 3;
 }
 
 .mot2{
     color: $color_secondaire;
-    animation: loader 2800ms 100ms 3;
+    animation: loader 900ms 100ms 3;
 }
 .mot3{
     color: $color_tertiaire;
-    animation: loader 2800ms 200ms 3;
+    animation: loader 900ms 200ms 3;
 }
 
 header{
