--- a/restaurant/sass/style.scss
+++ b/restaurant/sass/style.scss
@@ -192,16 +192,28 @@ main{
                 }
                 .commentaire{
                     width: 100%;
+                    font-size: 14px;
                     display: flex;
                     justify-content: space-between;
                     padding: 0px;
                     margin: 0px;
                     margin-bottom: -10px;
+                    .com{
+                        width: 80%;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                    }
                 }
                 h3{
+                    font-size: 17px;
                     padding: 0;
                     margin: 0;
-                    margin-bottom: -15px;
+                    margin-bottom: -10px;
+                    width: 90%;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
                 }
                 .prix{
                     margin-right:10px ;
@@ -209,7 +221,7 @@ main{
                 .choix{
                     width: 0px;
                     visibility: hidden;
-                    height: 130%;
+                    height: 135%;
                     color: white;
                     background-color: $color_tertiaire;
                     display: flex;
